# RAGflow

./: .env.example  .gitignore  README.md  compose.dmr.yaml  compose.yaml
.github/workflows/: embedder.yaml
embedder/: .dockerignore  Dockerfile  cli.py  helpers.py  pyproject.toml  settings.py
embedder/clients/: ollama_client.py  rabbitmq_client.py
embedder/embedder/: embedder.py
model_downloader/: app.py
pdf_reader/: Dockerfile  cli.py  helpers.py  pdf_reader.py  pyproject.toml  receive.py  settings.py  test_receive_text.py
pdf_reader/clients/: minio_client.py  rabbitmq_client.py
pdf_reader/outputs/: arxiv.pdf_processed.json  mdpi.pdf_processed.json  mdpi_2.pdf_processed.json
rabbitmq/: Dockerfile  debug.conf
text_chunker/: Dockerfile  chunking_explore.ipynb  cli.py  example_input.json  helpers.py  main.py  pyproject.toml  settings.py  test_receive_chunks.py
text_chunker/chunker/: chunker.py
text_chunker/clients/: rabbitmq_client.py
text_chunker/outputs/: chunk_0_pdf-data_arxiv.json  chunk_0_pdf-data_mdpi.json  chunk_0_pdf-data_mdpi_2.json  chunk_10_pdf-data_arxiv.json  chunk_10_pdf-data_mdpi.json  chunk_10_pdf-data_mdpi_2.json  chunk_11_pdf-data_arxiv.json  chunk_11_pdf-data_mdpi.json  chunk_11_pdf-data_mdpi_2.json  chunk_12_pdf-data_arxiv.json  chunk_12_pdf-data_mdpi.json  chunk_12_pdf-data_mdpi_2.json  chunk_13_pdf-data_arxiv.json  chunk_13_pdf-data_mdpi.json  chunk_13_pdf-data_mdpi_2.json  chunk_14_pdf-data_arxiv.json  (+137 more)
vector_indexer/: Dockerfile  cli.py  consumer.py  helpers.py  input_example.json  pyproject.toml  settings.py
(+3 files in other folders)
