[project]
name = "pdf-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv==0.9.9",
    "ipykernel>=7.1.0",
    "minio==7.2.15",
    "pdfplumber==0.11.6",
    "pi-heif>=1.1.0",
    "pika==1.3.2",
    "pydantic-settings==2.10.0",
    "pymupdf==1.25.5",
    "pypdf==5.5.0",
    "pytesseract>=0.3.13",
    "python-magic==0.4.27",
    "tabula-py==2.10.0",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "unstructured[local-inference]==0.17.2",
]
